packages/dashmate/configs/evonet/dapi/envoy/grpc.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          access_log:
            - name: envoy.file_access_log
              config:
                path: "/dev/stdout"
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: dapi_services
              domains: ["*"]
              routes:
                - match: { prefix: "/org.dash.platform.dapi.v0.Core" }
                  route:
                    cluster: core_and_platform
                    max_grpc_timeout: 0s
                - match: { prefix: "/org.dash.platform.dapi.v0.Platform" }
                  route:
                    cluster: core_and_platform
                    max_grpc_timeout: 0s
                - match: { prefix: "/org.dash.platform.dapi.v0.TransactionsFilterStream" }
                  route:
                    cluster: tx_filter_stream
                    max_grpc_timeout: 0s
                - match: { prefix: "/grpc.health.v1.Health" }
                  route:
                    cluster: tx_filter_stream
                    max_grpc_timeout: 0s
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.router
  clusters:
  - name: core_and_platform
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
    hosts: [{ socket_address: { address: dapi_api, port_value: 3005 }}]
  - name: tx_filter_stream
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: dapi_api, port_value: 3006 }}]
